Revert "Merge pull request #7296 from gradle/oehme/java9/suppress-groovy-warnings"
This reverts commit 166f63359900f1ef7115113cdf4a0699e425f645, reversing
changes made to cc54813e66af95f14764a40abbf4a72f200c60f2.